<!--
  ~ This file is part of Integreat.
  ~
  ~ Integreat is free software: you can redistribute it and/or modify
  ~ it under the terms of the GNU General Public License as published by
  ~ the Free Software Foundation, either version 3 of the License, or
  ~ (at your option) any later version.
  ~
  ~ Integreat is distributed in the hope that it will be useful,
  ~ but WITHOUT ANY WARRANTY; without even the implied warranty of
  ~ MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
  ~ GNU General Public License for more details.
  ~
  ~ You should have received a copy of the GNU General Public License
  ~ along with Integreat.  If not, see <http://www.gnu.org/licenses/>.
  -->

<resources>
    <string name="app_name" translatable="false">Integreat</string>
    <string name="refguide" translatable="false">Integreat %s</string>

    <string name="action_settings">Settings / Disclaimer</string>

    <string name="single_columns">View with a single column</string>
    <string name="multiple_columns">View with multiple columns</string>

    <string name="open_drawer">Open</string>
    <string name="close_drawer">Close</string>

    <string name="preference_category_general">General</string>

    <string name="font_size_small">Small</string>
    <string name="font_size_medium">Medium</string>
    <string name="font_size_large">Large</string>
    <string name="font_size_pref_summary">Set a font-size</string>
    <string name="font_size_pref_title">Font-size</string>
    <string name="font_size_xlarge">Extra Large</string>
    <string name="font_size_xsmall">Extra Small</string>
    <string name="no_entries_found">No entries found.</string>
    <string name="dialog_exit">Exit?</string>
    <string name="dialog_sure_exit">Are you sure you want to exit?</string>
    <string name="dialog_answer_no">No</string>
    <string name="dialog_answer_yes">Yes</string>
    <string name="change_language_location">Change Location</string>
    <string name="page_more">More</string>
    <string name="no_languages_found">No languages have been found.\nIt seems like the location you have selected is not available yet.\nPlease try it again later</string>
    <string name="no_locations_found">No locations have been found.\nIt seems like the server is not available.\nPlease try it again later</string>
    <string name="dialog_choose_language_title">Choose a language</string>
    <string name="title_activity_settings" translatable="false">Settings</string>

    <!-- Strings related to Settings -->

    <string name="search_title">Search</string>
    <string name="title_activity_event" translatable="false">EventActivity</string>
    <string name="event_list_title">Events</string>
    <string name="information">Information</string>
    <string name="dialog_title_loading_language">Loading…</string>
    <string name="dialog_content_loading_language">Please wait. Loading language.</string>
    <string name="language_fragment_title" translatable="false">SELECT A LANGUAGE</string>
    <string name="language_fragment_subtitle" translatable="false">What language do you speak?</string>
    <string name="location_fragment_title" translatable="false">SELECT A LOCATION</string>
    <string name="location_fragment_subtitle" translatable="false">Where are you?</string>
    <string name="no_other_languages_available_page">No other languages available for this article.</string>
    <string name="no_other_languages_available_location">No other language available.</string>
    <string name="location_search_text">Search for a location</string>
    <string name="no_events_found">There are currently no events.</string>
    <string name="auto_translated">This text is auto translated.</string>
    <string name="auto_translated_snackbar_close">Dismiss</string>
    <string name="clear_cache_pref_title">Clear cache</string>
    <string name="clear_cache_pref_summary">Removes all data and brings you back to the start menu</string>
    <string name="preferences_licenses">Copyright</string>
    <string name="preferences_icons_summary">… designed by Freepik (www.flaticon.com)</string>
    <string name="preferences_icons_title">Icons</string>
</resources>
