<?xml version="1.0" encoding="utf-8"?>
<!--
  ~ This file is part of Integreat.
  ~
  ~ Integreat is free software: you can redistribute it and/or modify
  ~ it under the terms of the GNU General Public License as published by
  ~ the Free Software Foundation, either version 3 of the License, or
  ~ (at your option) any later version.
  ~
  ~ Integreat is distributed in the hope that it will be useful,
  ~ but WITHOUT ANY WARRANTY; without even the implied warranty of
  ~ MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
  ~ GNU General Public License for more details.
  ~
  ~ You should have received a copy of the GNU General Public License
  ~ along with Integreat.  If not, see <http://www.gnu.org/licenses/>.
  -->

<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android" >
    <PreferenceCategory android:title="@string/preference_category_general">
        <ListPreference
            android:defaultValue="Small"
            android:entries="@array/font_sizes_names"
            android:entryValues="@array/font_sizes_values"
            android:key="font_style"
            android:summary="@string/font_size_pref_summary"
            android:title="@string/font_size_pref_title" />
        <Preference
            android:title="@string/clear_cache_pref_title"
            android:summary="@string/clear_cache_pref_summary"
            android:key="clear_cache"/>
    </PreferenceCategory>
    <PreferenceCategory android:title = "@string/preferences_licenses" android:key="licenses">
        <Preference
            android:title="@string/preferences_icons_title"
            android:summary="@string/preferences_icons_summary"/>
    </PreferenceCategory>
</PreferenceScreen>